Bug 58960 - Texture flicker with fragment shader
Summary: Texture flicker with fragment shader
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/DRI/i965 (show other bugs)
Version: 8.0
Hardware: x86 (IA32) Linux (All)
: medium normal
Assignee: Ian Romanick
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-01-02 23:26 UTC by olaf.klein
Modified: 2013-02-15 14:33 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
images, system info and example code (1.82 MB, text/plain)
2013-01-02 23:26 UTC, olaf.klein
Details

Description olaf.klein 2013-01-02 23:26:17 UTC
Created attachment 72398 [details]
images, system info and example code

Texture flicker with fragment shader AND using more than one texture unit AND using GL_TEXTURE_WRAP.. with GL_CLAMP_TO_EDGE AND using target GL_TEXTURE_2D. The flicker isn't visible f.e. with GL_CLAMP_TO_EDGE or with target GL_TEXTURE_RECTANGLE_ARB.


System: Dell Latitude D630 with openSUSE 12.2 (x86_32)
More information, images and a ready-to-run example (QT 4++) in attachment
Comment 1 Eric Anholt 2013-02-15 14:33:02 UTC
Thanks for the testcase!  That was very nice to work with.

commit c37992c54d753e732783f712dea2d483450371dd
Author: Eric Anholt <eric@anholt.net>
Date:   Tue Feb 5 15:46:22 2013 -0800

    i965/fs: Do a general SEND dependency workaround for the original 965.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.